src/components/Footer.css
.footer__container {
  background-color: var(--primary-color);
  height: fit-content;
  padding-top: 20px;
  color: var(--offwhite);
  font-weight: 300;
  letter-spacing: 1px;
  font-size: 90%;
}

.footer__menu {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  font-size: 90%;
}

.footer__menu.social {
  font-size: 20px;
  margin: auto;
  display: grid;
  margin-top: 10px;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: 40px;
  width: 200px;
}

.footer__menu ul {
  line-height: 25px;
  list-style: none;
  padding: 0;
}

.footer__menu a {
  color: var(--offgrey);
  text-decoration: none;
}

.footer__menu a:hover {
  color: var(--secondary-color);
}

a.footer__link {
  text-decoration: none;
  color: var(--secondary-color);
}

.footer__section3 {
  text-align: right;
}

@media screen and (max-width: 600px) {
  .footer__menu {
    flex-direction: column;
    font-size: 12px;
  }

  .footer__section3 {
    text-align: center;
  }

}

